--- a/resume.html
+++ b/resume.html
@@ -126,7 +126,7 @@ line. It is intended to be used for contact details -->
 <li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;">&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;</a></li>
 <li>0927309966</li>
 <li><a href="http://yiochou.com">yiochou.com</a></li>
-<li>台北市內湖區</li>
+<li>台北市 內湖區</li>
 </ul>
 <!-- The paragraph after the h1 and ul and before the first h2 is optional. It
 is intended to be used for a short summary. -->
@@ -134,9 +134,9 @@ is intended to be used for a short summary. -->
 <h2>Experience</h2>
 <!-- You have to wrap the "left" and "right" half of these headings in spans by
 hand -->
-<h3>SoundOn 2020/7 ~ 2021/7 </span></h3>
+<h3>SoundOn 2020/7 ~ 2021/7</h3>
 <p>TODO</p>
-<h3>LJIT 2018/5 ~ 2020/2</span></h3>
+<h3>LJIT 2018/5 ~ 2020/2</h3>
 <p>TODO</p>
 <h2>Projects</h2>
 <h2>Education</h2>
