--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>周易佑 (Yio Chou)</title>
+<title>周易佑 Yio</title>
 <style>
 body {
     color: #000000;
@@ -9,6 +9,7 @@ body {
     font: 1.1em "Times New Roman";
     line-height: 1.2;
     margin: 40px 0;
+    font-family: Trebuchet MS;
 }
 #resume {
     margin: 0 auto;
@@ -20,11 +21,11 @@ body {
     -webkit-box-shadow: 2px 2px 4px #AAAAAA;
 }
 h1 {
-    text-transform: uppercase;
     text-align: center;
     font-size: 200%;
-    margin: 0;
+    margin: 16;
     padding: 0;
+    font-family: Georgia;
 }
 h2 {
     border-bottom: 1px solid #000000;
@@ -32,6 +33,7 @@ h2 {
     font-size: 130%;
     margin: 1em 0 0 0;
     padding: 0;
+    font-family: Trebuchet MS;
 }
 h3 {
     font-size: 100%;
@@ -39,6 +41,11 @@ h3 {
     padding: 0;
     display: flex;
     justify-content: space-between;
+}
+h5 {
+    margin: 0;
+    font-size: 14;
+    opacity: 0.8;
 }
 p {
     margin: 0 0 0.5em 0;
@@ -69,6 +76,14 @@ h1 + ul > li:last-child:after {
 h1 + ul + p {
     margin: 1em 0;
 }
+
+a {
+    color: #000000;
+}
+a:link {
+    text-decoration: none;
+}
+
 @media print {
     body {
         font-size: 10pt;
@@ -119,31 +134,37 @@ h1 + ul + p {
 <body>
 <div id="resume">
 <!-- The (first) h1 will be used as the <title> of the HTML page -->
-<h1>周易佑 (Yio Chou)</h1>
+<h1>周易佑 Yio</h1>
 <!-- The unordered list immediately after the h1 will be formatted on a single
 line. It is intended to be used for contact details -->
 <ul>
-<li><a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;">&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;</a></li>
-<li>0927309966</li>
-<li><a href="http://yiochou.com">yiochou.com</a></li>
-<li>台北市 內湖區</li>
+<li><span>🏠</span> <a href="http://yiochou.com">yiochou.com</a></li>
+<li><span>✉️</span> <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;">&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;</a></li>
+<li><span>📞</span> 0927309966</li>
 </ul>
+<p><br></p>
 <!-- The paragraph after the h1 and ul and before the first h2 is optional. It
 is intended to be used for a short summary. -->
-<p>Hi
-I&rsquo;m Yio</p>
-<h2>Experience</h2>
+
+<h2>Work Experience</h2>
 <!-- You have to wrap the "left" and "right" half of these headings in spans by
 hand -->
-<h3>SoundOn 2020/7 ~ 2021/7</h3>
+<h3><span> SoundOn 聲浪科技 </span> 2020/7 - 2021/7</h3>
 <p>TODO</p>
-<h3>LJIT 2018/5 ~ 2020/2</h3>
+<h3><span> LJIT 利頡資訊 </span> 2018/5 - 2020/2</h3>
 <p>TODO</p>
-<h2>Projects</h2>
 <h2>Education</h2>
+<h3><span> 國立中央大學 資訊工程系 </span> 2013/9 - 2017/7</h3>
+<h5>Major in <strong>Computer Science</strong>.</h5>
+<h3><span> 國立彰化高中 </span> 2010/9 - 2013/7</h3>
 <h2>Skills</h2>
 <ul>
-<li>Web development: HTML, CSS, JavaScript</li>
-</ul></div>
+<li>Frontend：React, Redux, HTML, Javascript</li>
+<li>Backend：NodeJS, Typescript, Golang, MySQL, Firebase, Postgres, Redis, MongoDB</li>
+<li>DevOps：k8s, GCP(GKE), CircleCI, Docker</li>
+<li>Others: Git, FFmpeg</li>
+</ul>
+<h2>Interests</h2>
+<p>Dancing, Listening Music, Jogging</p></div>
 </body>
 </html>
