--- a/resume.html
+++ b/resume.html
@@ -84,6 +84,10 @@ a:link {
     text-decoration: none;
 }
 
+hr {
+    border-width: 0;
+}
+
 @media print {
     body {
         font-size: 10pt;
@@ -146,6 +150,7 @@ line. It is intended to be used for contact details -->
 <!-- The paragraph after the h1 and ul and before the first h2 is optional. It
 is intended to be used for a short summary. -->
 
+<hr />
 <h2>Work Experience</h2>
 <!-- You have to wrap the "left" and "right" half of these headings in spans by
 hand -->
@@ -153,10 +158,12 @@ hand -->
 <p>TODO</p>
 <h3><span> LJIT 利頡資訊 </span> 2018/5 - 2020/2</h3>
 <p>TODO</p>
+<hr />
 <h2>Education</h2>
 <h3><span> 國立中央大學 資訊工程系 </span> 2013/9 - 2017/7</h3>
 <h5>Major in <strong>Computer Science</strong>.</h5>
 <h3><span> 國立彰化高中 </span> 2010/9 - 2013/7</h3>
+<hr />
 <h2>Skills</h2>
 <ul>
 <li>Frontend：React, Redux, HTML, Javascript</li>
@@ -164,6 +171,7 @@ hand -->
 <li>DevOps：k8s, GCP(GKE), CircleCI, Docker</li>
 <li>Others: Git, FFmpeg</li>
 </ul>
+<hr />
 <h2>Interests</h2>
 <p>Dancing, Listening Music, Jogging</p></div>
 </body>
