--- a/resume.html
+++ b/resume.html
@@ -87,6 +87,9 @@ a:link {
 hr {
     border-width: 0;
 }
+li {
+    line-height: 1.5;
+}
 
 @media print {
     body {
@@ -146,7 +149,6 @@ line. It is intended to be used for contact details -->
 <li><span>✉️</span> <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;">&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;</a></li>
 <li><span>📞</span> 0927309966</li>
 </ul>
-<p><br></p>
 <!-- The paragraph after the h1 and ul and before the first h2 is optional. It
 is intended to be used for a short summary. -->
 
@@ -157,7 +159,16 @@ hand -->
 <h3><span> SoundOn 聲浪科技 </span> 2020/7 - 2021/7</h3>
 <p>TODO</p>
 <h3><span> LJIT 利頡資訊 </span> 2018/5 - 2020/2</h3>
-<p>TODO</p>
+<ul>
+<li>為專案公司，所以接觸到的技術多元，從前端一路接觸到後端，而後專職後端開發。</li>
+<li>參與 Code Review，並時常在內部讀書會上分享技術。</li>
+<li>參與過的專案：<ul>
+<li>區塊鏈前端應用(類 Fomo3D)，使用 React, Redux 開發，Webpack 打包，用 web3 與以太鏈發起交易與溝通。</li>
+<li>影音平台前後端，使用 FTP, AWS S3 作為儲存，加上多種 CDN 並讓用戶自行切換，加速影片讀取速度，DAU 約 4k。</li>
+<li>博弈專案(未上線)，開發各種玩法演算，並用 Jest 做單元測試。實作登入(認證)系統，包含二階段驗證。</li>
+</ul>
+</li>
+</ul>
 <hr />
 <h2>Education</h2>
 <h3><span> 國立中央大學 資訊工程系 </span> 2013/9 - 2017/7</h3>
