--- a/resume.html
+++ b/resume.html
@@ -145,9 +145,9 @@ li {
 <!-- The unordered list immediately after the h1 will be formatted on a single
 line. It is intended to be used for contact details -->
 <ul>
-<li><span>🏠</span> <a href="http://yiochou.com">yiochou.com</a></li>
+<li><span>🏡</span> <a href="http://yiochou.com">yiochou.com</a></li>
 <li><span>✉️</span> <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;">&#104;&#105;&#64;&#121;&#105;&#111;&#99;&#104;&#111;&#117;&#46;&#99;&#111;&#109;</a></li>
-<li><span>📞</span> 0927309966</li>
+<li><span>📱</span>0927309966</li>
 </ul>
 <!-- The paragraph after the h1 and ul and before the first h2 is optional. It
 is intended to be used for a short summary. -->
@@ -157,7 +157,15 @@ is intended to be used for a short summary. -->
 <!-- You have to wrap the "left" and "right" half of these headings in spans by
 hand -->
 <h3><span> SoundOn 聲浪科技 </span> 2020/7 - 2021/7</h3>
-<p>TODO</p>
+<ul>
+<li>開發 SoundOn Podcast Hosting / SoundOn Player 的後端需求，並優化既有程式碼。</li>
+<li>部署應用到 GKE (k8s)，並在 GCP 上建立 metrics 及 alerting policies，整合 Slack 後主動通知異常事件發生。</li>
+<li>使用 Google Dataflow 建立 ETL Job 來處理/分析資料，並在 Google Data Studio 做視覺化報表，供其他部門分析與下判斷。</li>
+<li>在無 downtime 的目標下，移除原先使用的 Firestore (NoSQL)，而改用 Postgres 作為 DB，一致化資料格式後，搬移舊資料。</li>
+<li>協助將 DB 及數據資料從 us-central 搬到 asia-east，大幅降低 latency。</li>
+<li>開發 7 天上線的 SoundClub 專案 (類 Clubhouse)。</li>
+<li>支援前端 (React, Redux), App 端 (Flutter)。</li>
+</ul>
 <h3><span> LJIT 利頡資訊 </span> 2018/5 - 2020/2</h3>
 <ul>
 <li>為專案公司，所以接觸到的技術多元，從前端一路接觸到後端，而後專職後端開發。</li>
@@ -178,9 +186,8 @@ hand -->
 <h2>Skills</h2>
 <ul>
 <li>Frontend：React, Redux, HTML, Javascript</li>
-<li>Backend：NodeJS, Typescript, Golang, MySQL, Firebase, Postgres, Redis, MongoDB</li>
-<li>DevOps：k8s, GCP(GKE), CircleCI, Docker</li>
-<li>Others: Git, FFmpeg</li>
+<li>Backend：NodeJS, Typescript, Golang, MySQL, Firebase, Postgres, Redis, MongoDB, k8s, GCP(GKE), CircleCI, Docker</li>
+<li>Others:  Git, Google Data Studio, OneSignal</li>
 </ul>
 <hr />
 <h2>Interests</h2>
